# airtable-streamlit

./: .gitignore  LICENSE  README.md  airtable-streamlit.py  pyproject.toml  requirements.txt
.streamlit/: secrets.example.toml
